--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
 
             <p><a href="http://www.systembolaget.se/">웹사이트</a>를 통해 해당 지점에 술이 있는지 없는지 검색이 가능하고, 없는 술은 (시간이 걸리지만) 주문도 가능합니다.</p>
             <p>토요일에는 빨리 닫고, 휴일에는 영업을 하지 않으니, 혹시 술을 마셔야 할 일이 있으면 미리미리 사두는 것이 좋습니다. 다행히도 가격은 꽤 저렴한 편에 속하고, 다양한 종류의 술이 있으니 그 부분은 다행..인듯 합니다.</p>
+            <p>술을 구매할 때 꼭 신분증이 필요합니다. 우리같은 교환학생들은 여권말고는 달리 나이를 증명할 방법이 없으니 "꼭" 여권을 가지고 가도록 합시다(한명만 있으면 되는게 아니라 같이 사러간 사람 모두가 여권 필요).</p>
+
+            <h2>우유 사기</h2>
+
+            <p>ICA나 기타 다른 슈퍼에서 우유를 살 때는 내가 사고 있는것이 무엇인지 꼭 확인하도록 합시다. 우유팩에 든 것이 우유가 아니라 요구르트일 수도 있습니다.</p>
         </div>
 
         <div id="swedish" class="container">
@@ -74,6 +79,7 @@
                 <li>Tack så mycket : Thank you very much</li>
                 <li>Tonfisk : 대서양참다랑어(참치)</li>
                 <li>Grötris : 찹쌀</li>
+                <li>Mjölk : 우유</li>
             </ul>
         </div>
 
