--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
             <h3>마트에서 물건 구입하기</h3>
 
-            <p>마트에서 물건을 구입할 떄, 어떤 제품을 고를지 고민이 되는 경우들이 있습니다. 이런 고민 해결을 도와드립니다.</p>
+            <p>마트에서 물건을 구입할 때, 어떤 제품을 고를지 고민이 되는 경우들이 있습니다. 이런 고민 해결을 도와드립니다.</p>
 
             <ul>
                 <li>우유 : ICA나 기타 다른 슈퍼에서 우유를 살 때는 내가 사고 있는것이 무엇인지 꼭 확인하도록 합시다. 우유팩에 든 것이 우유가 아니라 요구르트일 수도 있습니다.</li>
