--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="#beforecoming">스웨덴에 오기 전에</a></li>
                 <li><a href="#live">생활 전반</a></li>
                 <li><a href="#food">음식 관련</a></li>
+                <li><a href="#beforeleaving">스웨덴을 떠나기 전에</a></li>
                 <li><a href="#swedish">스웨덴어</a></li>
                 <li><a href="#shorttip">팁</a></li>
             </ol>
@@ -91,6 +92,22 @@
             </ul>
         </div>
 
+        <div id="beforeleaving" class="container">
+            <h2>스웨덴을 떠나기 전에</h2>
+
+            <h3>택배</h3>
+            <p>한국에서 짐을 많이 보내왔다면, 다시 한국으로 보내야하는 상황이 발생합니다. 가장 좋은 방법은 돌아가는 비행기에 수하물을 추가하여 한국으로 돌아가는 방법이지만, 학기를 마친 후 여행을 다니거나 수하물 추가에 많은 비용이 드는 항공사를 이용하는 경우에는 택배를 보내는 것이 더 좋을 수 있습니다. 일단, 택배를 보낼 수 있는 곳을 소개합니다.</p>
+
+            <ul>
+                <li>Centrum 근처 : Hemköp (Dragarbrunnsgatan 50)</li>
+                <li>Flogsta 근처 : ICA (Flogstavägen 99)</li>
+            </ul>
+
+            <p>위 장소 근처에서 <img src="http://www.posten.se/Themes/swedish-logo.png"> 마크를 찾으면 됩니다.</p>
+            <p>요금은 규격 박스와 그렇지 않은 박스에 따라 나뉩니다. 택배를 보낼 수 있는 곳에서 판매하는 규격 박스(31kr)에 넣어 보내는 경우, 가격은 5kg 이하는 404kr이고 20kg 이하는 616kr입니다. 그 외의 박스에 담아 보내는 경우, 가격이 한국의 1.5~2배 정도 됩니다. 가격은 변동될 수 있으니 자세한 정보는 각 장소에 놓여있는 책자(Portoguide)에서 확인하세요.</p>
+
+        </div>
+
         <div id="swedish" class="container">
             <h2>스웨덴어</h2>
 
@@ -98,8 +115,11 @@
 
             <ul>
                 <li>Hej : Hi</li>
+                <li>Hej då: Bye</li>
                 <li>Tack : Thank you</li>
                 <li>Tack så mycket : Thank you very much</li>
+                <li>Bra : Good</li>
+                <li>Jättebra : Very Good</li>
                 <li>Tonfisk : 대서양참다랑어(참치)</li>
                 <li>Grötris : 찹쌀</li>
                 <li>Mjölk : 우유</li>
